<resources>
    <string name="app_name">Campus Dining Options</string>
    <string name="action_settings">Settings</string>
    <string name="foods">Foods</string>
    <string name="times">Times</string>
    <string name="name">Name</string>
    <string name="time_layout_breakfast">%1$d AM - %2$d AM</string>
    <string name="time_layout_brunch">%1$d AM - %2$d PM</string>
    <string name="time_layout_lunch">%1$d AM - %2$d PM</string>
    <string name="time_layout_dinner">%1$d PM - %2$d PM</string>
    <string name="time_layout_grabngo">%1$d AM - %2$d PM</string>
    <string name="action_favorites">Favorites</string>
    <string name="hours_title">Hours</string>
    <string name="action_calendar">Calendar</string>
    <string name="cafe_menu_title">Cafe Menu</string>
    <string name="location_info">Location Info</string>
    <string name="action_refresh">Refresh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_add_favorite">Add Favorite</string>
    <string name="food_name">Food</string>
    <string name="name_hint">Eg: Chicken Tenders</string>
    <string name="favorites_initial_text">Add your favorite foods to be notified when they are being served.</string>
    <string name="favorites_title">Favorites</string>

    <!-- Strings for login fragment -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>

    <string name="login_error">Login Error!</string>
    <string name="no_passwords">You have no passwords</string>
    <string name="action_add">Add</string>
    <string name="action_logout">Logout</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="showPassword">Show password</string>
    <string name="save">Save</string>
    <string name="edit_password_title">Edit Password</string>
    <string name="service">Service</string>
    <string name="add_password_title">Add Password</string>
    <string name="add">Add</string>
    <string name="login_with_rosefire">Login with Rosefire</string>
    <string name="logout">Logout</string>
</resources>
