<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.rosehulman.dilta.campusdiningoptions.MainActivity">
    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="100"
        android:title="@string/action_calendar"
        android:icon="@mipmap/ic_action_date_range"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@mipmap/ic_action_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        android:icon="@mipmap/ic_action_star"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/login"
        android:orderInCategory="100"
        android:title="@string/action_sign_in"
        app:showAsAction="never" />

</menu>
